# syslibrary

./: MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yaml
notebook/: Test_sysV0p1.ipynb  test_syslib_mflike_interface.ipynb  test_syslib_nomflike.ipynb
syslibrary/: syslib.py  syslib_mflike.py
sysspectra/: syslib.py  syslib_mflike.py
sysspectra/data/: test_template.yaml
tools/: MFLike.yaml  mflike.py
